# pretendo

./: .gitignore  .gitmodules  APU.cc  APU.cpp  APU.h  AboutWindow.cc  AboutWindow.h  AlsaAudio.cc  AlsaAudio.h  Audio.h  AudioStream.h  BNROM.cc  BNROM.h  Bandai.h  BitField.h  CMakeLists.txt  CPU.cc  CPU.cpp  CPU.h  Cart.cc  Cart.h  Compiler.h  Config.cc  Config.cpp  Config.h  ConfigManager.cc  ConfigManager.h  Controller.cc  Controller.h  DMC.cc  DMC.cpp  DMC.h  Envelope.cc  Envelope.h  Fixed.h  HaikuMain.cc  Input.cc  Input.h  LFSR.h  LengthCounter.cc  (+155 more)
bender/: CPU.cc  CPU.h  bender.asm  bender.h  readme.txt
doc/: NESprgmn.txt  nestoy.txt
doc/apu/: nessound.txt  triangle step generator.txt
doc/cpu/: 2A03 technical reference.txt  6502.txt
doc/mappers/: 000.txt  001.txt  002.txt  003.txt  004.txt  005.txt  007.txt  009.txt  010.txt  011.txt  (+103 more)
haiku/: .PackageInfo  AboutWindow.cc  AboutWindow.h  AudioStream.cc  AudioStream.h  AudioView.cc  AudioView.h  AudioWindow.cc  CartInfoView.cc  CartInfoView.h  CartInfoWindow.cc  CartInfoWindow.h  HaikuMain.cc  LinkView.cc  LinkView.h  PaletteView.cc  PaletteView.h  PaletteWindow.cc  PaletteWindow.h  PretendoApp.cc  PretendoApp.h  PretendoView.cc  PretendoView.h  PretendoWindow.cc  PretendoWindow.h  ROMFilePanel.cc  ROMFilePanel.h  SimpleMutex.cc  SimpleMutex.h  VideoScreen.cc  VideoScreen.h  blitters.asm  blitters.h  copies.asm  copies.h
libines/: Makefile  ines_crc32.c  ines_crc32.h  ines_types.h  lib_ines.c  lib_ines.h  load_ines.c  load_ines.h
libunif/: Doxyfile  Makefile  UNIF_current.txt  ines_convert.c  ines_convert.h  lib_ines.c  lib_ines.h  lib_unif.c  lib_unif.h  load_ines.c  load_ines.h  load_unif.c  load_unif.h  main.c.bak  std_func.c  std_func.h  unif_crc32.c  unif_crc32.h  unif_types.h
mappers/: BNROM.h  Bandai.cc  Bandai.cpp  Bandai.h  CMakeLists.txt  MMC3.cc  MMC3.cpp  MMC3.h  Mapper000.cc  Mapper000.cpp  Mapper000.h  Mapper001.cc  Mapper001.cpp  Mapper001.h  Mapper002.cc  Mapper002.cpp  Mapper002.h  Mapper003.cc  Mapper003.cpp  Mapper003.h  Mapper004.cc  Mapper004.cpp  Mapper004.h  Mapper005.cc  Mapper005.cpp  Mapper005.h  Mapper007.cc  Mapper007.cpp  Mapper007.h  Mapper009.cc  Mapper009.cpp  Mapper009.h  Mapper010.cc  Mapper010.cpp  Mapper010.h  Mapper011.cc  Mapper011.cpp  Mapper011.h  Mapper013.cc  Mapper013.cpp  (+160 more)
nes-test-roms/: bxrom_512k_test.nes  coredump-v1.3.nes  palette_pal.nes
p6502/: CMakeLists.txt  CPU.cc  CPU.h  P6502.cc  P6502.cpp  P6502.h  P6502bitfield.h  address_modes.h  bitfield.h  memory.h  opcodes.h
p6502/address_modes/: absolute.h  absolute_x.h  absolute_y.h  accumulator.h  immediate.h  implied.h  indexed_indirect.h  indirect.h  indirect_indexed.h  relative.h  stack.h  zero_page.h  zero_page_x.h  zero_page_y.h
p6502/opcodes/: adc.h  and.h  asl.h  bcc.h  bcs.h  beq.h  bit.h  bmi.h  bne.h  bpl.h  branch.h  brk.h  bvc.h  bvs.h  clc.h  cld.h  cli.h  clv.h  cmp.h  compare.h  cpx.h  cpy.h  dec.h  dex.h  dey.h  eor.h  inc.h  inx.h  iny.h  jmp.h  lda.h  ldx.h  ldy.h  lsr.h  nop.h  ora.h  pha.h  php.h  pla.h  plp.h  (+16 more)
p6502/opcodes/special/: brk.h  irq.h  jam.h  jsr.h  nmi.h  rst.h  rti.h  rts.h
p6502/opcodes/unofficial/: aac.h  aax.h  arr.h  asr.h  axa.h  axs.h  dcp.h  isc.h  lar.h  lax.h  rla.h  rra.h  slo.h  sre.h  sxa.h  sya.h  xaa.h  xas.h
qt/: About.cc  About.cpp  About.h  About.ui  AlsaAudio.cc  AlsaAudio.h  AudioBuffer.cc  AudioBuffer.h  AudioViewer.cc  AudioViewer.cpp  AudioViewer.h  AudioViewer.ui  NullAudio.cpp  NullAudio.h  Preferences.cc  Preferences.cpp  Preferences.h  Preferences.ui  Pretendo.cc  Pretendo.cpp  Pretendo.h  Pretendo.ui  PulseAudio.cpp  PulseAudio.h  QGLVideo.cc  QtAudio.cc  QtAudio.h  QtVideo.cc  QtVideo.cpp  QtVideo.h  SDLAudio.cc  SDLAudio.h  SortFilterProxyModel.h  glext.h  main.cpp  pretendo.qrc
src/: APU.cpp  Apu.cpp  Apu.h  BitField.h  Bus.cpp  Bus.h  CMakeLists.txt  CPU.cpp  CPU.h  Cart.cpp  Cart.h  Compiler.h  Config.cpp  Config.h  Controller.cpp  Controller.h  Cpu.cpp  Cpu.h  DMC.h  Dmc.cpp  Dmc.h  Envelope.cpp  Envelope.h  Input.cpp  Input.h  LengthCounter.cpp  LengthCounter.h  Lfsr.h  LinearCounter.cpp  LinearCounter.h  Mapper.cpp  Mapper.h  MemoryMappedFile.cpp  MemoryMappedFile.h  Nes.cpp  Nes.h  Noise.cpp  Noise.h  PPU.cpp  PPU.h  (+19 more)
src/address_modes/: absolute.h  absolute_x.h  absolute_y.h  accumulator.h  immediate.h  implied.h  indexed_indirect.h  indirect.h  indirect_indexed.h  relative.h  stack.h  zero_page.h  zero_page_x.h  zero_page_y.h
src/graphics/vector/: pretendo_icon
src/mappers/: Bandai.cpp  Bandai.h  CMakeLists.txt  MMC3.cpp  MMC3.h  Mapper000.cpp  Mapper001.h  Mapper002.cpp  Mapper002.h  Mapper003.cpp  Mapper003.h  Mapper004.h  Mapper005.cpp  Mapper005.h  Mapper009.cpp  Mapper009.h  Mapper010.cpp  Mapper011.h  Mapper013.cpp  Mapper013.h  Mapper015.cpp  Mapper016.h  Mapper018.cpp  Mapper018.h  Mapper021.cpp  Mapper021.h  Mapper022.cpp  Mapper023.h  Mapper026.cpp  Mapper026.h  Mapper027.cpp  Mapper027.h  Mapper032.h  Mapper033.h  Mapper034.cpp  Mapper034.h  Mapper040.cpp  Mapper040.h  Mapper043.cpp  Mapper046.cpp  (+40 more)
src/opcodes/: adc.h  and.h  asl.h  bcc.h  bcs.h  beq.h  bit.h  bmi.h  bne.h  bpl.h  branch.h  bvc.h  bvs.h  clc.h  cld.h  cli.h  clv.h  cmp.h  compare.h  cpx.h  cpy.h  dec.h  dex.h  dey.h  eor.h  inc.h  inx.h  iny.h  jmp.h  jsr.h  lda.h  ldx.h  ldy.h  lsr.h  nop.h  ora.h  pha.h  php.h  pla.h  plp.h  (+17 more)
src/opcodes/special/: brk.h  irq.h  jam.h  jsr.h  nmi.h  rst.h  rti.h  rts.h
src/opcodes/unofficial/: aac.h  aax.h  arr.h  asr.h  axa.h  axs.h  dcp.h  isc.h  lar.h  lax.h  rla.h  rra.h  slo.h  sre.h  sxa.h  sya.h  xaa.h  xas.h
src/qt/: About.cpp  About.h  About.ui  Audio.cpp  Audio.h  AudioViewer.cpp  AudioViewer.h  FilesystemModel.cpp  FilesystemModel.h  NullAudio.cpp  PatternTableView.cpp  PatternTableView.h  PatternTableView.ui  Preferences.cpp  Preferences.h  Preferences.ui  Pretendo.cpp  Pretendo.h  Pretendo.ui  PulseAudio.cpp  PulseAudio.h  QtVideo.cpp  QtVideo.h  Settings.cpp  Settings.h  SortFilterProxyModel.cpp  SortFilterProxyModel.h  glext.h  main.cpp  pretendo.qrc
src/qt/graphics/vector/: pretendo.hvif
(+250 files in other folders)
