cmake_minimum_required(VERSION 3.0)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

add_library (mappers OBJECT
	Bandai.cpp
	Bandai.h
	MMC3.cpp
	MMC3.h
	Mapper000.cpp
	Mapper000.h
	Mapper001.cpp
	Mapper001.h
	Mapper002.cpp
	Mapper002.h
	Mapper003.cpp
	Mapper003.h
	Mapper004.cpp
	Mapper004.h
	Mapper005.cpp
	Mapper005.h
	Mapper007.cpp
	Mapper007.h
	Mapper009.cpp
	Mapper009.h
	Mapper010.cpp
	Mapper010.h
	Mapper011.cpp
	Mapper011.h
	Mapper013.cpp
	Mapper013.h
	Mapper015.cpp
	Mapper015.h
	Mapper016.cpp
	Mapper016.h
	Mapper018.cpp
	Mapper018.h
	Mapper019.cpp
	Mapper019.h
	Mapper021.cpp
	Mapper021.h
	Mapper022.cpp
	Mapper022.h
	Mapper023.cpp
	Mapper023.h
	Mapper024.cpp
	Mapper024.h
	Mapper025.cpp
	Mapper025.h
	Mapper026.cpp
	Mapper026.h
	Mapper027.cpp
	Mapper027.h
	Mapper032.cpp
	Mapper032.h
	Mapper033.cpp
	Mapper033.h
	Mapper034.cpp
	Mapper034.h
	Mapper040.cpp
	Mapper040.h
	Mapper041.cpp
	Mapper041.h
	Mapper043.cpp
	Mapper043.h
	Mapper046.cpp
	Mapper046.h
	Mapper048.cpp
	Mapper048.h
	Mapper050.cpp
	Mapper050.h
	Mapper057.cpp
	Mapper057.h
	Mapper058.cpp
	Mapper058.h
	Mapper061.cpp
	Mapper061.h
	Mapper064.cpp
	Mapper064.h
	Mapper066.cpp
	Mapper066.h
	Mapper068.cpp
	Mapper068.h
	Mapper069.cpp
	Mapper069.h
	Mapper071.cpp
	Mapper071.h
	Mapper075.cpp
	Mapper075.h
	Mapper076.cpp
	Mapper076.h
	Mapper079.cpp
	Mapper079.h
	Mapper086.cpp
	Mapper086.h
	Mapper088.cpp
	Mapper088.h
	Mapper090.cpp
	Mapper090.h
	Mapper113.cpp
	Mapper113.h
	Mapper118.cpp
	Mapper118.h
	Mapper144.cpp
	Mapper144.h
	Mapper159.cpp
	Mapper159.h
	Mapper163.cpp
	Mapper163.h
	Mapper180.cpp
	Mapper180.h
	Mapper201.cpp
	Mapper201.h
	Mapper206.cpp
	Mapper206.h
	Mapper218.cpp
	Mapper218.h
	Mapper226.cpp
	Mapper226.h
	Mapper228.cpp
	Mapper228.h
	Mapper231.cpp
	Mapper231.h
	Mapper232.cpp
	Mapper232.h
	Mapper240.cpp
	Mapper240.h
	Mapper241.cpp
	Mapper241.h
	Mapper242.cpp
	Mapper242.h
	Mapper243.cpp
	Mapper243.h
	Mapper245.cpp
	Mapper245.h
	VRC2.cpp
	VRC2.h
	VRC4.cpp
	VRC4.h
	VRC6.cpp
	VRC6.h
)

target_include_directories (mappers PUBLIC
	${CMAKE_CURRENT_SOURCE_DIR} 
	${PROJECT_SOURCE_DIR}/src
	${PROJECT_SOURCE_DIR}/libines2/lib/include
)

set_property(TARGET mappers PROPERTY CXX_STANDARD 14)
set_property(TARGET mappers PROPERTY CXX_EXTENSIONS OFF)
