cmake_minimum_required(VERSION 3.0)

add_library (p6502
	P6502.cpp
	P6502.h
	p6502bitfield.h
	P6502.h
	opcodes/adc.h
	opcodes/branch.h
	opcodes/ldy.h
	opcodes/sed.h
	opcodes/bcs.h
	opcodes/compare.h
	opcodes/sec.h
	opcodes/tsx.h
	opcodes/asl.h
	opcodes/txs.h
	opcodes/cpy.h
	opcodes/clc.h
	opcodes/unofficial/aac.h
	opcodes/unofficial/sxa.h
	opcodes/unofficial/lax.h
	opcodes/unofficial/rla.h
	opcodes/unofficial/arr.h
	opcodes/unofficial/xaa.h
	opcodes/unofficial/aax.h
	opcodes/unofficial/sya.h
	opcodes/unofficial/asr.h
	opcodes/unofficial/axs.h
	opcodes/unofficial/isc.h
	opcodes/unofficial/slo.h
	opcodes/unofficial/axa.h
	opcodes/unofficial/sre.h
	opcodes/unofficial/lar.h
	opcodes/unofficial/rra.h
	opcodes/unofficial/xas.h
	opcodes/unofficial/dcp.h
	opcodes/lsr.h
	opcodes/bcc.h
	opcodes/stx.h
	opcodes/txa.h
	opcodes/lda.h
	opcodes/cld.h
	opcodes/bmi.h
	opcodes/tya.h
	opcodes/dey.h
	opcodes/pha.h
	opcodes/pla.h
	opcodes/ora.h
	opcodes/rts.h
	opcodes/rti.h
	opcodes/and.h
	opcodes/php.h
	opcodes/bne.h
	opcodes/tax.h
	opcodes/sty.h
	opcodes/bvs.h
	opcodes/bit.h
	opcodes/jsr.h
	opcodes/plp.h
	opcodes/cpx.h
	opcodes/dex.h
	opcodes/sta.h
	opcodes/tay.h
	opcodes/clv.h
	opcodes/special/irq.h
	opcodes/special/brk.h
	opcodes/special/jam.h
	opcodes/special/rst.h
	opcodes/special/rts.h
	opcodes/special/rti.h
	opcodes/special/nmi.h
	opcodes/special/jsr.h
	opcodes/sei.h
	opcodes/cli.h
	opcodes/nop.h
	opcodes/jmp.h
	opcodes/cmp.h
	opcodes/inc.h
	opcodes/beq.h
	opcodes/dec.h
	opcodes/ror.h
	opcodes/iny.h
	opcodes/sbc.h
	opcodes/inx.h
	opcodes/eor.h
	opcodes/bvc.h
	opcodes/ldx.h
	opcodes/bpl.h
	opcodes/rol.h
	opcodes.h
	memory.h
	address_modes/absolute_x.h
	address_modes/indexed_indirect.h
	address_modes/zero_page_y.h
	address_modes/stack.h
	address_modes/absolute_y.h
	address_modes/indirect.h
	address_modes/implied.h
	address_modes/indirect_indexed.h
	address_modes/absolute.h
	address_modes/zero_page_x.h
	address_modes/zero_page.h
	address_modes/relative.h
	address_modes/accumulator.h
	address_modes/immediate.h
	address_modes.h
)

target_include_directories (p6502 PUBLIC
	${CMAKE_CURRENT_SOURCE_DIR} 
	${PROJECT_SOURCE_DIR}/src
)

target_link_libraries(p6502 LINK_PUBLIC
)

set_property(TARGET p6502 PROPERTY CXX_STANDARD 14)
set_property(TARGET p6502 PROPERTY CXX_EXTENSIONS OFF)
